# Fortress-Prime

./: --since 30s -f fortress-refinery-agent  .coverage  .cursorrules  .dockerignore  .env.example  .env.legal.example  .gitignore  .vercelignore  ARCHITECTURE.md  AUDIT_COMPLETE.md  BROWSER_MCP_CONFIGURED.md  CLAUDE.md  CODEBASE_OVERVIEW.md  COMMAND_CODES.md  COMPLETE_SETUP_GUIDE.md  CONSTITUTION.md  COUNCIL_DEPLOYMENT_COMPLETE.md  COUNCIL_OF_GIANTS_READY.md  CROG_AI_LOGIN_VERIFICATION_REPORT.md  CROG_AI_WEBSITE_TEST_REPORT.md  CROG_COMMAND_CENTER_READY.md  CURSOR_MCP_TEST_QUERIES.md  CURSOR_QUICK_TEST.md  CURSOR_TESTING_CHECKLIST.md  DATABASE_AUDIT_JORDI.md  DATABASE_STATUS_COMPLETE.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_STATUS.md  DGX_WHISPERX_DEPLOYED.md  Dockerfile  Dockerfile.pulse-agent  Dockerfile.refinery-agent  Dockerfile.swarm-worker  Dockerfile.watchdog  ENTERPRISE_GUEST_PLATFORM_ARCHITECTURE.md  ENTERPRISE_SMS_DEPLOYMENT_COMPLETE.md  ENTERPRISE_SMS_PLATFORM_ARCHITECTURE.md  EVERYTHING_BUILT_SUMMARY.md  EXECUTIVE_SUMMARY.md  FIRST_HUNT_SUCCESS.md  (+109 more)
alembic/: env.py
crog-ai-backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
crog-ai-backend/alembic/: env.py
crog-ai-backend/app/: database.py  main.py
crog-ai-backend/docs/: ADR-0001-sprint-schema.md  ADR-0002-dochia-v1-calibration-methodology.md  ADR-0003-dochia-v1-fit-method.md  MARKETCLUB-DOCHIA-BUILD-PLAN.md  MARKETCLUB-SHADOW-REVIEW-RUNBOOK.md  MARKETCLUB-SIGNALS-INCIDENT-RESPONSE-CHECKLIST.md  MARKETCLUB-SIGNALS-PRODUCTION-RUNBOOK.md  MARKETCLUB-SIGNALS-ROLLBACK-DRILL-CHECKLIST.md  (+4 more)
(+5811 files in other folders)
